<resources>
    <string name="app_name">Quicker</string>
    <string name="action_settings">Settings</string>
    <string name="home_message">Welcome back \n%s!</string>
    <string name="play_button">Play</string>
    <string name="settings_button">Settings</string>
    <string name="about_button">Tutorial</string>
    <string name="about_title">TUTORIAL</string>
    <string name="about_content">This simple game will measure your reaction time! All you need to do is know the rules</string>
    <string name="about_green">You only need to click green square once</string>
    <string name="about_yellow">Yellow square = 2 taps</string>
    <string name="about_red">Red one is scary\n(that means 3 touches)</string>
    <string name="about_penalty">And don\'t forget,\nfollow the rules,\nor else…</string>
    <string name="title_activity_about">About</string>
    <string name="guess_too_high">Too high!</string>
    <string name="guess_too_low">Too low!</string>
    <string name="guess_number_initial_message">Guess a number between\n 1 and 100</string>
    <string name="scores_button">Top scores</string>
    <string name="home_button">Home</string>
    <string name="player_name">Player name</string>
    <string name="saved_successfully">Saved successfully!</string>
    <string name="player_age">Player age</string>
    <string name="play_click_to_guess_number">Click to guess number</string>
    <string name="game_your_guess">Your guess was %d and it was too %s</string>
    <string name="high">high</string>
    <string name="low">low</string>
    <string name="go">GO!</string>
    <string name="finish">Finish!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_scores">Top Scores</string>
    <string name="scores_player_name">Player name:</string>
    <string name="scores_age">Age</string>
    <string name="penalty">Penalty!</string>
</resources>
