<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home_button"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home_button" />
        <item
            android:id="@+id/menu_scores_button"
            android:icon="@drawable/ic_format_list_numbered_black_24dp"
            android:title="@string/scores_button" />
        <item
            android:id="@+id/menu_settings_button"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings_button" />
        <item
            android:id="@+id/menu_about_button"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/about_button" />
    </group>
</menu>