<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/about_tutorial"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.07"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/about_title"
    android:textColor="?colorPrimary"
    android:textSize="18pt" />


    <TextView
        android:id="@+id/about_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/about_tutorial"
        app:layout_constraintVertical_bias="0.10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_content"
        android:textColor="?colorPrimary"
        android:textSize="12pt" />

    <TextView
        android:id="@+id/about_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/about_start"
        app:layout_constraintVertical_bias="0.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_green"
        android:textColor="@color/lime"
        android:textSize="12pt" />

    <TextView
        android:id="@+id/about_yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/about_green"
        app:layout_constraintVertical_bias="0.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_yellow"
        android:textColor="@color/yellow"
        android:textSize="12pt" />

    <TextView
        android:id="@+id/about_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/about_yellow"
        app:layout_constraintVertical_bias="0.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_red"
        android:textColor="@color/red"
        android:textSize="12pt" />

    <TextView
        android:id="@+id/about_end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/about_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_penalty"
        android:textColor="?colorPrimary"
        android:textSize="12pt" />

</androidx.constraintlayout.widget.ConstraintLayout>